# RAG_practice

./: .env_sample  .gitignore  RAGAS Test Dataset Generation Study.ipynb  README.md  Synthetic Test Dataset Generation.ipynb  docling_test.ipynb  knowledge_graph.json  pyproject.toml  requirements_colab.txt  upstage_test.ipynb
graph RAG/: Graph_RAG.ipynb
naive_RAG/: Naive_RAG.ipynb
self_RAG/: self_RAG.ipynb
