[tool.poetry]
name = "rag-practice"
version = "0.1.0"
description = ""
authors = ["bm1120 <bm1120@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"

# 언어 및 자연어 처리 관련 패키지
langchain = ">=0.3,<0.4"
langchain-core = ">=0.3,<0.4"
langchain-experimental = ">=0.3,<0.4"
langchain-community = ">=0.3,<0.4"
langchain-text-splitters = ">=0.3,<0.4"

langserve = ">=0.3,<0.4"
langgraph = ">=0.2.20,<0.3"

langchain-ollama = ">=0.2,<0.3"
langchain-chroma = ">=0.1.4,<0.2"
langchain-openai = ">=0.3,<0.4"
langchain-anthropic = ">=0.2,<0.3"
langchain-google-genai = ">=2,<3"
langchain-huggingface = ">=0.1,<0.2"

python-dotenv = "^1.0.0"
langsmith = "^0.3.11"
langchain-teddynote = "^0.3.42"
ragas = "^0.2.14"
huggingface-hub = "^0.29.1"
deepl = "^1.21.0"
openai = "^1.65.3"
pandas = "^2.2.3"
pymupdf = "^1.25.3"
pypdf = ">=4.2.0,<5.0.0"
pdfplumber = "^0.11.5"
matplotlib = "^3.10.1"
streamlit = "^1.43.0"
jupyterlab = "^4.3.5"
faiss-cpu = "^1.10.0"
seaborn = "^0.13.2"
scikit-learn = "^1.6.1"
tiktoken = "^0.9.0"
arxiv = "^2.1.3"
rapidfuzz = "^3.12.2"
langchain-docling = "^0.2.0"
docling = "^2.28.0"
langchain-upstage = "^0.6.0"
html2text = "^2024.2.26"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
